--- a/app/src/main/res/layout/activity_donate.xml
+++ b/app/src/main/res/layout/activity_donate.xml
@@ -15,10 +15,46 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/Donate"
-        android:id="@+id/textView3"
+        android:id="@+id/donateHeader"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textSize="40sp"
         android:gravity="center"
         android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/DonatePageIntroText"
+        android:id="@+id/donatePageIntroText"
+        android:layout_below="@+id/donateHeader"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="36dp"
+        android:textStyle="bold"
+        android:textColor="#000000" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/DonateLoc1Text"
+        android:id="@+id/DonateLoc1Text"
+        android:layout_below="@+id/donatePageIntroText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="33dp"
+        android:textStyle="bold"
+        android:textColor="#000000" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/DonateMapButton1"
+        android:id="@+id/donateMapButton1"
+        android:layout_alignBottom="@+id/DonateLoc1Text"
+        android:layout_alignRight="@+id/DonateLoc1Text"
+        android:layout_alignEnd="@+id/DonateLoc1Text" />
+
 </RelativeLayout>
