--- a/app/src/main/res/layout/activity_donate.xml
+++ b/app/src/main/res/layout/activity_donate.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,6 +9,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.team1.csc425_project.Donate">
+
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        tools:context="com.team1.csc425_project.Donate">
 
     <TextView
         android:layout_width="wrap_content"
@@ -40,7 +48,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/DonateLoc1Text"
-        android:id="@+id/DonateLoc1Text"
+        android:id="@+id/donateLoc1Text"
         android:layout_below="@+id/donatePageIntroText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -53,8 +61,55 @@
         android:layout_height="wrap_content"
         android:text="@string/DonateMapButton1"
         android:id="@+id/donateMapButton1"
-        android:layout_alignBottom="@+id/DonateLoc1Text"
-        android:layout_alignRight="@+id/DonateLoc1Text"
-        android:layout_alignEnd="@+id/DonateLoc1Text" />
+        android:layout_alignBottom="@+id/donateLoc1Text"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
-</RelativeLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/DonateLoc2Text"
+        android:id="@+id/donateLoc2Text"
+        android:layout_marginTop="33dp"
+        android:textStyle="bold"
+        android:textColor="#000000"
+        android:layout_below="@+id/donateLoc1Text"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/DonateMapButton2"
+        android:id="@+id/donateMapButton2"
+        android:layout_alignBottom="@+id/donateLoc2Text"
+        android:layout_alignLeft="@+id/donateMapButton1"
+        android:layout_alignStart="@+id/donateMapButton1" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/DonateLoc3Text"
+        android:id="@+id/donateLoc3Text"
+        android:layout_below="@+id/donateLoc2Text"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="33dp"
+        android:textStyle="bold"
+        android:textColor="#000000" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/DonateMapButton3"
+        android:id="@+id/donateMapButton3"
+        android:layout_alignBottom="@+id/donateLoc3Text"
+        android:layout_alignLeft="@+id/donateMapButton2"
+        android:layout_alignStart="@+id/donateMapButton2" />
+
+
+    </RelativeLayout>
+
+</ScrollView>
