--- a/app/src/main/res/layout/activity_get_resources.xml
+++ b/app/src/main/res/layout/activity_get_resources.xml
@@ -20,5 +20,6 @@
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:textSize="40sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="#ffffff" />
 </RelativeLayout>
