--- a/app/src/main/res/layout/content_news_read.xml
+++ b/app/src/main/res/layout/content_news_read.xml
@@ -11,15 +11,60 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.team1.csc425_project.NewsRead"
     tools:showIn="@layout/activity_news_read">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/news_read_title"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/news_read_body"/>
+
+    <android.support.v7.widget.CardView
+        android:layout_margin="7dp"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:id="@+id/view2"
+        android:elevation="5dp"
+        android:layout_alignParentStart="false">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
 
+        </FrameLayout>
+    </android.support.v7.widget.CardView>
+
+
+
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/view"
+        android:layout_below="@+id/view2"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="7dp"
+        android:elevation="5dp">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/scrollView2" >
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/news_read_body"/>
+            </ScrollView>
+
+
+        </FrameLayout>
+    </android.support.v7.widget.CardView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/news_read_title"
+        android:text="title"
+        android:gravity="center_vertical|center_horizontal"
+        android:textColor="#000000"
+        android:layout_above="@+id/view"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
