--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -44,6 +44,8 @@
                         android:textStyle="bold"
                         android:id="@+id/title1" />
                     <TextView
+                        android:paddingTop="@dimen/news_card_frame_padding_top"
+                        android:paddingRight="@dimen/news_card_frame_padding_right"
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -86,6 +88,9 @@
                         android:textStyle="bold"
                         android:id="@+id/title2" />
                     <TextView
+                        android:paddingTop="@dimen/news_card_frame_padding_top"
+                        android:paddingRight="@dimen/news_card_frame_padding_right"
+
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -127,6 +132,9 @@
                         android:textStyle="bold"
                         android:id="@+id/title3" />
                     <TextView
+                        android:paddingTop="@dimen/news_card_frame_padding_top"
+                        android:paddingRight="@dimen/news_card_frame_padding_right"
+
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -168,6 +176,9 @@
                         android:textStyle="bold"
                         android:id="@+id/title4" />
                     <TextView
+                        android:paddingTop="@dimen/news_card_frame_padding_top"
+                        android:paddingRight="@dimen/news_card_frame_padding_right"
+
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -209,6 +220,9 @@
                         android:textStyle="bold"
                         android:id="@+id/title5" />
                     <TextView
+                        android:paddingTop="@dimen/news_card_frame_padding_top"
+                        android:paddingRight="@dimen/news_card_frame_padding_right"
+
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -250,6 +264,9 @@
                         android:textStyle="bold"
                         android:id="@+id/title6" />
                     <TextView
+                        android:paddingTop="@dimen/news_card_frame_padding_top"
+                        android:paddingRight="@dimen/news_card_frame_padding_right"
+
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -291,6 +308,9 @@
                         android:textStyle="bold"
                         android:id="@+id/title7" />
                     <TextView
+                        android:paddingTop="@dimen/news_card_frame_padding_top"
+                        android:paddingRight="@dimen/news_card_frame_padding_right"
+
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -332,6 +352,9 @@
                         android:textStyle="bold"
                         android:id="@+id/title8" />
                     <TextView
+                        android:paddingTop="@dimen/news_card_frame_padding_top"
+                        android:paddingRight="@dimen/news_card_frame_padding_right"
+
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -373,6 +396,9 @@
                         android:textStyle="bold"
                         android:id="@+id/title9" />
                     <TextView
+                        android:paddingTop="@dimen/news_card_frame_padding_top"
+                        android:paddingRight="@dimen/news_card_frame_padding_right"
+
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -414,6 +440,9 @@
                         android:textStyle="bold"
                         android:id="@+id/title10" />
                     <TextView
+                        android:paddingTop="@dimen/news_card_frame_padding_top"
+                        android:paddingRight="@dimen/news_card_frame_padding_right"
+
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
