--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,8 +3,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="news_card_margin">7dp</dimen>
-    <dimen name="news_card_height">100dp</dimen>
+    <dimen name="news_card_height">200dp</dimen>
     <dimen name="news_card_elevation">5dp</dimen>
     <dimen name="news_card_frame_padding">10dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="news_card_frame_padding_top">30dp</dimen>
+    <dimen name="news_card_frame_padding_right">100dp</dimen>
 </resources>
