--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -3,10 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
 
-    tools:context="com.team1.csc425_project.News">
+    tools:context="com.team1.csc425_project.News"
+    android:background="@color/news_background">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -25,7 +27,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/card1"
                 app:cardElevation="@dimen/news_card_elevation"
-                app:cardBackgroundColor="@color/news_card_background">
+                app:cardBackgroundColor="@color/news_card_background"
+                >
 
                 <FrameLayout
                     android:paddingLeft="@dimen/news_card_frame_padding"
@@ -42,8 +45,11 @@
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="Title"
                         android:textStyle="bold"
-                        android:id="@+id/title1" />
+                        android:id="@+id/title1"
+                        android:textColor="@color/news_card_text"/>
+
                     <TextView
+                        android:textColor="@color/news_card_text"
                         android:paddingTop="@dimen/news_card_frame_padding_top"
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
@@ -74,6 +80,8 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:textColor="@color/news_card_text"
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -81,6 +89,8 @@
                         android:textStyle="bold"
                         android:id="@+id/title2" />
                     <TextView
+                        android:textColor="@color/news_card_text"
+
                         android:paddingTop="@dimen/news_card_frame_padding_top"
 
                         android:layout_marginTop="20dp"
@@ -115,10 +125,13 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="Title"
+                        android:textColor="@color/news_card_text"
+
                         android:textStyle="bold"
                         android:id="@+id/title3" />
                     <TextView
                         android:paddingTop="@dimen/news_card_frame_padding_top"
+                        android:textColor="@color/news_card_text"
 
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
@@ -148,6 +161,8 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:textColor="@color/news_card_text"
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -156,6 +171,7 @@
                         android:id="@+id/title4" />
                     <TextView
                         android:paddingTop="@dimen/news_card_frame_padding_top"
+                        android:textColor="@color/news_card_text"
 
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
@@ -184,6 +200,8 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:textColor="@color/news_card_text"
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -192,6 +210,7 @@
                         android:id="@+id/title5" />
                     <TextView
                         android:paddingTop="@dimen/news_card_frame_padding_top"
+                        android:textColor="@color/news_card_text"
 
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
@@ -221,6 +240,8 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:textColor="@color/news_card_text"
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -229,6 +250,7 @@
                         android:id="@+id/title6" />
                     <TextView
                         android:paddingTop="@dimen/news_card_frame_padding_top"
+                        android:textColor="@color/news_card_text"
 
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
@@ -258,6 +280,8 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:textColor="@color/news_card_text"
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -266,6 +290,7 @@
                         android:id="@+id/title7" />
                     <TextView
                         android:paddingTop="@dimen/news_card_frame_padding_top"
+                        android:textColor="@color/news_card_text"
 
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
@@ -295,6 +320,8 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:textColor="@color/news_card_text"
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -303,6 +330,7 @@
                         android:id="@+id/title8" />
                     <TextView
                         android:paddingTop="@dimen/news_card_frame_padding_top"
+                        android:textColor="@color/news_card_text"
 
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
@@ -333,6 +361,8 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:textColor="@color/news_card_text"
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -341,6 +371,7 @@
                         android:id="@+id/title9" />
                     <TextView
                         android:paddingTop="@dimen/news_card_frame_padding_top"
+                        android:textColor="@color/news_card_text"
 
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
@@ -371,6 +402,8 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:textColor="@color/news_card_text"
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -379,6 +412,7 @@
                         android:id="@+id/title10" />
                     <TextView
                         android:paddingTop="@dimen/news_card_frame_padding_top"
+                        android:textColor="@color/news_card_text"
 
                         android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
