--- a/app/src/main/res/layout/content_news_web.xml
+++ b/app/src/main/res/layout/content_news_web.xml
@@ -4,13 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.team1.csc425_project.NewsWeb"
     tools:showIn="@layout/activity_news_web">
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fab_news_read"
+        android:elevation="@dimen/fab_elevation"
+        android:background="@color/colorAccent"
+
+        android:src="@android:drawable/ic_menu_share"
+
+
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="false"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="10dp" />
+
 
     <WebView
         android:layout_width="match_parent"
