--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="news_card_frame_padding_top">30dp</dimen>
     <dimen name="news_card_frame_padding_right">100dp</dimen>
+    <dimen name="fab_elevation">7dp</dimen>
 </resources>
