--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -13,7 +13,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/scrollView"
+        android:id="@+id/scrollNews"
         android:scrollbars="none">
 
         <LinearLayout
@@ -425,6 +425,13 @@
 
                 </FrameLayout>
             </android.support.v7.widget.CardView>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Load 10 More"
+                android:id="@+id/loadMore"
+                android:layout_gravity="center_horizontal" />
 
         </LinearLayout>
     </ScrollView>
