--- a/app/src/main/res/layout/activity_get_resources.xml
+++ b/app/src/main/res/layout/activity_get_resources.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,16 +10,156 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.team1.csc425_project.GetResources">
 
-    <TextView
-        android:layout_width="wrap_content"
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/GetResources"
-        android:id="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        android:textColor="#ffffff" />
-</RelativeLayout>
+        tools:context="com.team1.csc425_project.GetResources">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/Resource"
+            android:id="@+id/resourceHeader"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textSize="40sp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="#ffffff" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/WaterPickUp"
+            android:id="@+id/donatePageIntroText"
+            android:layout_marginTop="37dp"
+            android:textStyle="bold|normal"
+            android:textColor="#ffffff"
+            android:layout_below="@+id/resourceHeader"
+            android:layout_centerHorizontal="true"
+            android:textSize="25sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/ResourceLoc1"
+            android:id="@+id/resourceLoc1"
+            android:layout_below="@+id/donatePageIntroText"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="33dp"
+            android:textStyle="bold"
+            android:textColor="#ffffff" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ResourceMapButton1"
+            android:id="@+id/resourceMapButton1"
+            android:layout_alignBottom="@+id/resourceLoc1"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:onClick="process"
+            android:clickable="false" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/ResourceLoc2"
+            android:id="@+id/resourceLoc2"
+            android:layout_marginTop="33dp"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:layout_below="@+id/resourceLoc1"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ResourceMapButton2"
+            android:id="@+id/resourceMapButton2"
+            android:layout_alignBottom="@+id/resourceLoc2"
+            android:layout_alignLeft="@+id/resourceMapButton1"
+            android:layout_alignStart="@+id/resourceMapButton1"
+            android:onClick="process"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/ResourceLoc3"
+            android:id="@+id/resourceLoc3"
+            android:layout_below="@+id/resourceLoc2"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="33dp"
+            android:textStyle="bold"
+            android:textColor="#ffffff" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ResourceMapButton3"
+            android:id="@+id/resourceMapButton3"
+            android:layout_alignBottom="@+id/resourceLoc3"
+            android:layout_alignLeft="@+id/resourceMapButton2"
+            android:layout_alignStart="@+id/resourceMapButton2"
+            android:onClick="process"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/ResourceLoc4"
+            android:id="@+id/resourceLoc4"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:layout_below="@+id/resourceLoc3"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="33dp" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ResourceMapButton4"
+            android:id="@+id/resourceMapButton4"
+            android:onClick="process"
+            android:layout_alignBottom="@+id/resourceLoc4"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/ResourceLoc5"
+            android:id="@+id/resourceLoc5"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:layout_below="@+id/resourceLoc4"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="33dp" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ResourceMapButton5"
+            android:id="@+id/resourceMapButton5"
+            android:onClick="process"
+            android:layout_alignParentBottom="true"
+            android:layout_alignLeft="@+id/resourceMapButton4"
+            android:layout_alignStart="@+id/resourceMapButton4" />
+
+
+    </RelativeLayout>
+
+</ScrollView>
